rendom vectors fully included

--- a/main/Makefile
+++ b/main/Makefile
@@ -20,7 +20,7 @@ all: rmxeq mkdep mkxeq
 
 MAIN = contract
 
-GENERAL = global_data global_data_input_handling \
+GENERAL = global_data global_data_input_handling global_data_build_IO_names \
 	        global_data_input_handling_utils global_data_init_lookup_tables \
 	        global_data_init_lookup_tables_utils RandomVector ranlxs
 
