vdaggerv included, rvdaggerv and rvdaggervr are still missing

--- a/main/Makefile
+++ b/main/Makefile
@@ -27,7 +27,7 @@ GLOBALDATA = global_data global_data_input_handling global_data_build_IO_names \
 
 RANDOM = RandomVector ranlxs
 
-GENERAL = Perambulator EigenVector
+GENERAL = Perambulator EigenVector OperatorsForMesons
 
 MODULES = $(GLOBALDATA) $(RANDOM) $(GENERAL)
 
