--- a/main/contract.in
+++ b/main/contract.in
@@ -32,13 +32,17 @@ quark = u:5:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
 # operators to be used
 [operator_lists]
 operator_list = g1.d0.p0
-#operator_list = g3.d0.p0
+operator_list = g2.d0.p0
+operator_list = g3.d0.p0
+operator_list = g5.d0.p0
 
 # all correlation functions which will be computed
 [correlator_lists]
-#correlator_list = C2+:Q0:Op0:Q0:Op0
+correlator_list = C2+:Q0:Op3:Q0:Op3
 #correlator_list = C2+:Q0:Op0:Q1:Op0
-correlator_list = C20:Q0:Op0:Q0:Op0
+#correlator_list = C20:Q0:Op0:Q0:Op0
+#correlator_list = C20:Q0:Op1:Q0:Op1
+#correlator_list = C20:Q0:Op2:Q0:Op2
 #correlator_list = C20:Q1:Op1:Q0:Op0
 #correlator_list = C2+:Q1:Op1:Q0:Op0
 #correlator_list = C20:Q1:Op0:Q0:Op1
