--- a/main/contract.in
+++ b/main/contract.in
@@ -27,21 +27,27 @@ overwrite_old = yes
 # quarks to be used - The file at the and is the location of the perambulators.
 [quarks]
 quark = u:5:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
-#quark = s:5:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/strange
+quark = s:5:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/strange
 
 # operators to be used
 [operator_lists]
+operator_list = g0.d0.p0
 operator_list = g1.d0.p0
 operator_list = g2.d0.p0
 operator_list = g3.d0.p0
+operator_list = g4.d0.p0
 operator_list = g5.d0.p0
+operator_list = g6.d0.p0
 
 # all correlation functions which will be computed
 [correlator_lists]
-correlator_list = C2+:Q0:Op3:Q0:Op3
+#correlator_list = C1:Q0:Op2
+#correlator_list = C2+:Q0:Op5:Q0:Op5
+#correlator_list = C2+:Q1:Op4:Q0:Op4
+#correlator_list = C2+:Q1:Op4:Q1:Op4
 #correlator_list = C2+:Q0:Op0:Q1:Op0
 #correlator_list = C20:Q0:Op0:Q0:Op0
-#correlator_list = C20:Q0:Op1:Q0:Op1
+correlator_list = C20:Q0:Op4:Q0:Op4
 #correlator_list = C20:Q0:Op2:Q0:Op2
 #correlator_list = C20:Q1:Op1:Q0:Op0
 #correlator_list = C2+:Q1:Op1:Q0:Op0
