charged 4pt functions included and bug with momenta fixed - finetuning is next

--- a/main/contract.in
+++ b/main/contract.in
@@ -38,13 +38,17 @@ operator_list = g3.d0.p0
 operator_list = g4.d0.p0
 operator_list = g5.d0.p0
 operator_list = g6.d0.p0
+operator_list = g7.d0.p0
+operator_list = g8.d0.p0
+operator_list = g9.d0.p0
 
 # all correlation functions which will be computed
 [correlator_lists]
 #correlator_list = C1:Q0:Op4
-correlator_list = C2+:Q0:Op5:Q0:Op5
-correlator_list = C4+D:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C2+:Q1:Op5:Q0:Op5
+#correlator_list = C2+:Q0:Op5:Q0:Op5
+#correlator_list = C4+D:Q0:Op6:Q0:Op6:Q0:Op6:Q0:Op6
+#correlator_list = C4+C:Q0:Op6:Q0:Op6:Q0:Op6:Q0:Op6
+correlator_list = C4+B:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C40D:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
 #correlator_list = C20:Q0:Op4:Q0:Op4
 #correlator_list = C20:Q0:Op5:Q1:Op5
