--- a/main/mom1.in
+++ b/main/mom1.in
@@ -21,7 +21,7 @@ path_config = ./
 number_of_eigen_vec = 120
 path_eigenvectors   = /data/LapHs/contraction_Markus/test_data/ev
 name_eigenvectors   = eigenvectors
-handling_vdaggerv   = read
+handling_vdaggerv   = write
 path_vdaggerv       = /data/LapHs/contraction_Markus/test_data/operators
 
 # output path
@@ -34,11 +34,18 @@ overwrite_old = yes
 [quarks]
 quark = u:6:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
 
-
 # operators to be used
 [operator_lists]
-operator_list = g5.d0.p0,1
+# mom 1
+operator_list = g1.d0.p1
+operator_list = g2.d0.p1
+operator_list = g3.d0.p1
+operator_list = g5.d0.p1
 
 # all correlation functions which will be computed
 [correlator_lists]
-correlator_list = C4+B:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+# mom 1
+correlator_list = C20:Q0:Op2:Q0:Op2 #rho 
+correlator_list = C20:Q0:Op1:Q0:Op1 #rho 
+correlator_list = C20:Q0:Op0:Q0:Op0 #rho 
+#correlator_list = C20:Q0:Op3:Q0:Op3 #rho 
