--- a/main/D4.in
+++ b/main/D4.in
@@ -35,7 +35,8 @@ quark = u:6:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
 # operators to be used
 [operator_lists]
 operator_list = g5.d0.p0,1
+operator_list = g1.d0.p0
 
 # all correlation functions which will be computed
 [correlator_lists]
-correlator_list = C3+:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op1:Q0:Op0
