--- a/main/D4.in
+++ b/main/D4.in
@@ -21,7 +21,7 @@ path_config = ./
 number_of_eigen_vec = 120
 path_eigenvectors   = /data/LapHs/contraction_Markus/test_data/ev
 name_eigenvectors   = eigenvectors
-handling_vdaggerv   = read
+handling_vdaggerv   = write
 path_vdaggerv       = /data/LapHs/contraction_Markus/test_data/operators
 
 # output path
@@ -34,9 +34,28 @@ quark = u:6:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
 
 # operators to be used
 [operator_lists]
-operator_list = g5.d0.p0,1
-operator_list = g1.d0.p0
+operator_list = g5.d0.p0,1,2,3,4
+operator_list = g1.d0.p0,1,2,3,4
+operator_list = g2.d0.p0,1,2,3,4
+operator_list = g3.d0.p0,1,2,3,4
+operator_list = g10.d0.p0,1,2,3,4
+operator_list = g11.d0.p0,1,2,3,4
+operator_list = g12.d0.p0,1,2,3,4
+operator_list = g13.d0.p0,1,2,3,4
+operator_list = g14.d0.p0,1,2,3,4
+operator_list = g15.d0.p0,1,2,3,4
 
 # all correlation functions which will be computed
 [correlator_lists]
 correlator_list = C3+:Q0:Op0:Q0:Op1:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op2:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op3:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op4:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op5:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op6:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op7:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op8:Q0:Op0
+correlator_list = C3+:Q0:Op0:Q0:Op9:Q0:Op0
+
+
+
