--- a/main/D4.in
+++ b/main/D4.in
@@ -2,7 +2,7 @@
 
 # perallelisation: Be carefull - Atm I would only use one thread for Eigen. It 
 #                                usually is much slower than simple omp!
-nb_omp_threads = 4
+nb_omp_threads = 2
 nb_eigen_threads = 1
 
 # lattice parameters:
@@ -12,42 +12,29 @@ Ly = 24
 Lz = 24 
 
 # configuration handling: 
-start_config = 712
-end_config   = 714
+start_config = 888
+end_config   = 890
 delta_config = 2
 
 # eigenvector handling:
 number_of_eigen_vec = 120
-path_eigenvectors   = /data/LapHs/contraction_Markus/test_data/ev
+path_eigenvectors   = /hiskp2/eigensystems/A40.24_L24_T48_beta190_mul0040_musig150_mudel190_kappa1632700/hyp_062_058_3/nev_120/
 name_eigenvectors   = eigenvectors
-#handling_vdaggerv   = write
-#path_vdaggerv       = /data/LapHs/contraction_Markus/test_data/operators
-
+#handling_vdaggerv   = build
+#path_vdaggerv       = ./operators  
 # output path
-output_path = /data2/test4
+output_path = /hiskp2/knippsch/Check_Perams/
 overwrite_old = yes
 
 # quarks to be used - The file at the and is the location of the perambulators.
 [quarks]
-quark = u:6:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
+quark = u:6:TI:2:EI:6:DI:4:/hiskp2/perambulators/A40.24/u_quark
 
-# operators to be used
-[operator_lists]
+# operators to be used                                                          
+[operator_lists]                                                                
 operator_list = g5.d0.p0
-operator_list = g1.d0.p0,1,2,3,4
-operator_list = g2.d0.p0,1,2,3,4
-operator_list = g3.d0.p0,1,2,3,4
-operator_list = g10.d0.p0,1,2,3,4
-operator_list = g11.d0.p0,1,2,3,4
-operator_list = g12.d0.p0,1,2,3,4
-operator_list = g13.d0.p0,1,2,3,4
-operator_list = g14.d0.p0,1,2,3,4
-operator_list = g15.d0.p0,1,2,3,4
-
-# all correlation functions which will be computed
-[correlator_lists]
-correlator_list = C2+:Q0:Op0:Q0:Op0
-correlator_list = Check:Q0:Op0:Q0:Op0
-
-
-
+                                                                                
+# all correlation functions which will be computed                              
+[correlator_lists]                                                              
+correlator_list = C2+:Q0:Op0:Q0:Op0                                    
+correlator_list = Check:Q0:Op0:Q0:Op0                                     
