--- a/main/Makefile
+++ b/main/Makefile
@@ -38,28 +38,27 @@ VPATH = .:$(MDIR):$(MDIR)/GlobalData:$(MDIR)/Correlators
 # Logging option (-mpilog or -mpitrace or -mpianim)
 LOGOPTION =
 
-LIMEPATH = /home/knippsch/ExternLibraries/lime
+LIMEPATH = /hiskp2/helmes/programm_libs/lime-1.3.2 
 
 # additional include directories
-INCPATH = /home/knippsch/ExternLibraries/eigen-3.2.1 \
-          /home/knippsch/ExternLibraries/boost_1_55_0 \
-          $(LIMEPATH)/include/ ../include ../include/GlobalData
+INCPATH = /hiskp2/helmes/programm_libs/eigen-3.2.0 \
+          /hiskp2/knippsch/contraction/libs/boostLIBS/include \
+          $(LIMEPATH)/include ../include ../include/GlobalData
 
 # additional libraries
 
-LIBS = boost_program_options lime 
+LIBS = boost_program_options boost_filesystem boost_system lime 
 
 LIBPATH = /usr/local/lib $(LIMEPATH)/lib \
-          /home/knippsch/ExternLibraries/boost_1_55_0/stage/lib/
+				  /hiskp2/knippsch/contraction/libs/boostLIBS/lib/
 
 # scheduling and optimization options
-CFLAGS = -Wall -pedantic -std=c++11 -fopenmp -O2 -march=native \
-         -Wno-unused-variable -Wno-unused-local-typedefs -Wno-sign-compare \
-         -lboost_system -lboost_filesystem
+CFLAGS = -Wall -pedantic -std=c++0x -fopenmp -O2 -march=native \
+         -Wno-unused-variable -Wno-unused-local-typedefs -Wno-sign-compare 
 ############################## do not change ###################################
 
 SHELL=/bin/bash
-CC=g++
+CC=g++-4.7
 CLINKER=$(CC)
 
 PGMS= $(MAIN) $(MODULES)
@@ -70,20 +69,20 @@ PGMS= $(MAIN) $(MODULES)
 # rule to make dependencies
 
 $(addsuffix .d,$(PGMS)): %.d: %.cpp Makefile
-	@ $(CC) -ansi $< -MM $(addprefix -I,$(INCPATH)) -o $@ $(CFLAGS)
+	@ $(CC) -ansi $< -MM $(addprefix -I,$(INCPATH)) -o $@ $(CFLAGS) 
 
 
 # rule to compile source programs
 
 $(addsuffix .o,$(PGMS)): %.o: %.cpp Makefile
-	$(CC) $< -c $(CFLAGS) $(LOGOPTION) $(addprefix -I,$(INCPATH)) -static
+	$(CC) $< -c $(CFLAGS) $(LOGOPTION) $(addprefix -I,$(INCPATH))
 
 
 # rule to link object files
 
 $(MAIN): %: %.o $(addsuffix .o,$(MODULES)) Makefile
 	$(CLINKER) $< $(addsuffix .o,$(MODULES)) $(CFLAGS) $(LOGOPTION) \
-	   $(addprefix -L,$(LIBPATH)) $(addprefix -l,$(LIBS)) -lm -o $@ -static
+	   $(addprefix -L,$(LIBPATH)) $(addprefix -l,$(LIBS)) -lm -o $@
 
 # produce executables
 
