--- a/main/D4.in
+++ b/main/D4.in
@@ -40,11 +40,12 @@ operator_list = g1.d0.p0,1
 
 # all correlation functions which will be computed
 [correlator_lists]
-#correlator_list = C20:Q0:Op1:Q0:Op1
-#correlator_list = C3+:Q0:Op0:Q0:Op1:Q0:Op0
-#correlator_list = C4+D:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
 correlator_list = C2+:Q0:Op0:Q0:Op0
-#correlator_list = C4+B:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+correlator_list = C4+D:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+correlator_list = C4+V:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+correlator_list = C20:Q0:Op1:Q0:Op1
+correlator_list = C3+:Q0:Op0:Q0:Op1:Q0:Op0
+correlator_list = C4+B:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
 
 
 
