--- a/main/contract.in
+++ b/main/contract.in
@@ -30,7 +30,7 @@ overwrite_old = yes
 # quarks to be used - The file at the and is the location of the perambulators.
 [quarks]
 quark = u:5:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
-#quark = s:4:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/strange
+quark = s:4:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/strange
 
 
 # operators to be used
