--- a/main/D4.in
+++ b/main/D4.in
@@ -21,9 +21,9 @@ path_config = ./
 number_of_eigen_vec = 120
 path_eigenvectors   = /data/LapHs/contraction_Markus/test_data/ev
 name_eigenvectors   = eigenvectors
-handling_vdaggerv   = read
-path_vdaggerv       = /data/LapHs/contraction_Markus/test_data/operators
-#path_vdaggerv       = /data2/test5/liuming_operators
+handling_vdaggerv   = liuming
+#path_vdaggerv       = /data/LapHs/contraction_Markus/test_data/operators
+path_vdaggerv       = /data2/test5/liuming_operators
 
 # output path
 output_path = /data2/test4
@@ -35,17 +35,17 @@ quark = u:6:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
 
 # operators to be used
 [operator_lists]
-operator_list = g5.d0.p0,1
+operator_list = g5.d0.p0,1,2,3,4
 operator_list = g1.d0.p0,1
 
 # all correlation functions which will be computed
 [correlator_lists]
 correlator_list = C2+:Q0:Op0:Q0:Op0
-correlator_list = C4+D:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
-correlator_list = C4+V:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
-correlator_list = C20:Q0:Op1:Q0:Op1
-correlator_list = C3+:Q0:Op0:Q0:Op1:Q0:Op0
-correlator_list = C4+B:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+#correlator_list = C4+D:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+#correlator_list = C4+V:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
+#correlator_list = C20:Q0:Op1:Q0:Op1
+#correlator_list = C3+:Q0:Op0:Q0:Op1:Q0:Op0
+#correlator_list = C4+B:Q0:Op0:Q0:Op0:Q0:Op0:Q0:Op0
 
 
 
