--- a/main/I2.in
+++ b/main/I2.in
@@ -31,7 +31,6 @@ overwrite_old = yes
 # quarks to be used - The file at the and is the location of the perambulators.
 [quarks]
 quark = u:4:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
-quark = s:4:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/strange
 
 # operators to be used
 [operator_lists]
@@ -40,26 +39,14 @@ operator_list = g1.d0.p0
 operator_list = g2.d0.p0
 operator_list = g3.d0.p0
 operator_list = g4.d0.p0
-operator_list = g5.d0.p0
-operator_list = g6.d0.p0
-operator_list = g7.d0.p0
-operator_list = g8.d0.p0
-operator_list = g9.d0.p0
+operator_list = g5.d0.p2
+operator_list = g5.d0.p3
 
 # all correlation functions which will be computed
 [correlator_lists]
-correlator_list = C1:Q0:Op4
-#correlator_list = C2+:Q0:Op5:Q0:Op5 #pion
-#correlator_list = C2+:Q0:Op5:Q1:Op5 #kaon
-#correlator_list = C4+D:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C4+V:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C4+C:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C4+B:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#
-#correlator_list = C20:Q0:Op4:Q0:Op4 #pion
-#correlator_list = C20:Q0:Op4:Q1:Op4 #kaon
-#correlator_list = C30:Q0:Op4:Q0:Op4:Q0:Op4
-#correlator_list = C40D:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
-#correlator_list = C40V:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
-#correlator_list = C40C:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
-#correlator_list = C40B:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
+correlator_list = C2+:Q0:Op5:Q0:Op5 #pion
+correlator_list = C4+D:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+correlator_list = C4+C:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+correlator_list = C2+:Q0:Op6:Q0:Op6 #pion
+correlator_list = C4+D:Q0:Op6:Q0:Op6:Q0:Op6:Q0:Op6
+correlator_list = C4+C:Q0:Op6:Q0:Op6:Q0:Op6:Q0:Op6
