--- a/main/contract.in
+++ b/main/contract.in
@@ -19,19 +19,19 @@ path_config = ./
 
 # eigenvector handling:
 number_of_eigen_vec = 120
-path_eigenvectors   = /data/LapHs/contraction_Markus/test_data/ev
+path_eigenvectors   = 
 name_eigenvectors   = eigenvectors
+handling_vdaggerv   = read
+path_vdaggerv       = /hiskp2/werner/vdaggerv/A40.24
+
 # output path
 output_path = .
 overwrite_old = yes
 
-
-
 # quarks to be used - The file at the and is the location of the perambulators.
 [quarks]
-quark = u:5:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/up
-quark = s:4:TI:2:EI:6:DI:4:/data/LapHs/contraction_Markus/test_data/peram/strange
-
+quark = u:6:TI:2:EI:6:DI:4:/hiskp2/perambulators/A40.24_sorted/light
+quark = s:4:TI:2:EI:6:DI:4:/hiskp2/perambulators/A40.24_sorted/strange_2250
 
 # operators to be used
 [operator_lists]
@@ -40,7 +40,7 @@ operator_list = g1.d0.p0
 operator_list = g2.d0.p0
 operator_list = g3.d0.p0
 operator_list = g4.d0.p0
-operator_list = g5.d0.p0,1
+operator_list = g5.d0.p0
 operator_list = g6.d0.p0
 operator_list = g7.d0.p0
 operator_list = g8.d0.p0
@@ -51,7 +51,7 @@ operator_list = g9.d0.p0
 #correlator_list = C1:Q0:Op4
 #correlator_list = C2+:Q0:Op6:Q0:Op6 #pion
 #correlator_list = C2+:Q0:Op5:Q1:Op5 #kaon
-correlator_list = C4+D:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+correlator_list = C40D:Q0:Op4:Q1:Op4:Q0:Op4:Q0:Op4
 #correlator_list = C4+V:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C4+C:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C4+B:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
