--- a/main/contract.in
+++ b/main/contract.in
@@ -15,7 +15,6 @@ Lz = 24
 start_config = 714
 end_config   = 714
 delta_config = 4
-path_config = ./
 
 # eigenvector handling:
 number_of_eigen_vec = 120
@@ -49,9 +48,9 @@ operator_list = g9.d0.p0
 # all correlation functions which will be computed
 [correlator_lists]
 #correlator_list = C1:Q0:Op4
-#correlator_list = C2+:Q0:Op6:Q0:Op6 #pion
+#correlator_list = C20:Q0:Op4:Q0:Op4 #pion
 #correlator_list = C2+:Q0:Op5:Q1:Op5 #kaon
-correlator_list = C40D:Q0:Op4:Q1:Op4:Q0:Op4:Q0:Op4
+#correlator_list = C40D:Q0:Op4:Q1:Op4:Q0:Op4:Q0:Op4
 #correlator_list = C4+V:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C4+C:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C4+B:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
@@ -68,10 +67,10 @@ correlator_list = C40D:Q0:Op4:Q1:Op4:Q0:Op4:Q0:Op4
 #correlator_list = C40D:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
 #correlator_list = C40V:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
 #correlator_list = C40C:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
-#correlator_list = C40B:Q0:Op4:Q0:Op4:Q0:Op4:Q0:Op4
+#correlator_list = C40B:Q0:Op4:Q1:Op4:Q0:Op4:Q0:Op4
 #correlator_list = C40D:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C40V:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
-#correlator_list = C40C:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
+correlator_list = C40C:Q0:Op4:Q1:Op4:Q0:Op4:Q0:Op4
 #correlator_list = C40B:Q0:Op5:Q0:Op5:Q0:Op5:Q0:Op5
 #correlator_list = C40D:Q0:Op4:Q0:Op5:Q0:Op4:Q0:Op5
 #correlator_list = C40V:Q0:Op4:Q0:Op5:Q0:Op4:Q0:Op5
