--- a/main/test_all.in
+++ b/main/test_all.in
@@ -26,7 +26,7 @@ path_vdaggerv       = /hiskp2/werner/output/
 #path_vdaggerv       = /data2/test5/liuming_operators
 
 # output path
-output_path = /hiskp2/werner/output/sLapH_contraction-test
+output_path = /hiskp2/werner/output/sLapH_contraction-test/TravisCI/
 overwrite_old = yes
 
 # quarks to be used - The file at the and is the location of the perambulators.
@@ -50,38 +50,45 @@ operator_list = g5.d0.p0
     
 # all correlation functions which will be computed                              
 [correlator_lists]
-#correlator_list = C2+:Q0:Op9:Q0:Op9 #pion
 
-# rho
-#correlator_list = C20:Q0:Op0:Q0:Op0 #rho
-#correlator_list = C20:Q0:Op0:Q0:Op1 #rho
-#correlator_list = C20:Q0:Op0:Q0:Op2 #rho
-#correlator_list = C20:Q0:Op1:Q0:Op0 #rho
-#correlator_list = C20:Q0:Op1:Q0:Op1 #rho
-#correlator_list = C20:Q0:Op1:Q0:Op2 #rho
-#correlator_list = C20:Q0:Op2:Q0:Op0 #rho
-#correlator_list = C20:Q0:Op2:Q0:Op1 #rho
-#correlator_list = C20:Q0:Op2:Q0:Op2 #rho
-#
-#correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9
-#correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9
+# pion
+correlator_list = C2+:Q0:Op9:Q0:Op9 #pion
+correlator_list = C2+:Q0:Op9:Q1:Op9 #kaon
 
-# neutral diagrams
-#correlator_list = C30:Q0:Op9:Q0:Op0:Q0:Op9
-#correlator_list = C40D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-#correlator_list = C40V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-#correlator_list = C40B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-#correlator_list = C40C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+# rho 2pt functions
+correlator_list = C20:Q0:Op0:Q0:Op0 #rho
+correlator_list = C20:Q0:Op0:Q0:Op1 #rho
+correlator_list = C20:Q0:Op0:Q0:Op2 #rho
+correlator_list = C20:Q0:Op1:Q0:Op0 #rho
+correlator_list = C20:Q0:Op1:Q0:Op1 #rho
+correlator_list = C20:Q0:Op1:Q0:Op2 #rho
+correlator_list = C20:Q0:Op2:Q0:Op0 #rho
+correlator_list = C20:Q0:Op2:Q0:Op1 #rho
+correlator_list = C20:Q0:Op2:Q0:Op2 #rho
 
-# charged diagrams
-#correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-#correlator_list = C4+V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-#correlator_list = C4+B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
-#correlator_list = C4+C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+# charged 3pt diagrams 
+correlator_list = C3+:Q0:Op9:Q0:Op0:Q0:Op9
+correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9
+correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9
 
-correlator_list = C2+:Q0:Op10:Q0:Op10 #unitary pion
-correlator_list = C2+:Q0:Op10:Q1:Op10 #OS kaon
+# neutral 3pt diagrams
+correlator_list = C30:Q0:Op9:Q0:Op0:Q0:Op9
+
+# charged 4pt diagrams
+correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+correlator_list = C4+V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+correlator_list = C4+B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+correlator_list = C4+C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+
+# neutral 4pt diagrams
+correlator_list = C40D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+correlator_list = C40V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+correlator_list = C40B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+correlator_list = C40C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+
+
+#correlator_list = C2+:Q0:Op10:Q0:Op10 #unitary pion
+#correlator_list = C2+:Q0:Op10:Q1:Op10 #OS kaon
 ##correlator_list = C2+:Q0:Op10:Q0:Op10 #usualpion with gamma10
 ##correlator_list = C2+:Q0:Op4:Q0:Op4 #OS pion with \bar{u}^+u^-
 #correlator_list = C4+D:Q0:Op10:Q1:Op10:Q0:Op10:Q0:Op10 # direct K^+pi^+
