--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 add_definitions(-Wall -pedantic --std=c++11)
 add_definitions(-Wno-unused-variable -Wno-unused-local-typedefs -Wno-sign-compare)
 
-string(TOLOWER "${CMAKE_BUILD_TYPE}" cmake_build_type_lower )
+message(STATUS "Build Type: '${CMAKE_BUILD_TYPE}'")
+if(CMAKE_BUILD_TYPE STREQUAL "")
+    message(STATUS "No CMAKE_BUILD_TYPE, assuming release and enabling all optimizations.")
+    set(CMAKE_BUILD_TYPE Release)
+endif()
+
+string(TOLOWER "${CMAKE_BUILD_TYPE}" cmake_build_type_lower)
 if(cmake_build_type_lower STREQUAL "release")
     add_definitions(-O3 -march=native)
 endif()
