--- a/infiles/test_all.in
+++ b/infiles/test_all.in
@@ -23,7 +23,6 @@ path_eigenvectors   = /hiskp2/eigensystems/A40.24_L24_T48_beta190_mul0040_musig1
 name_eigenvectors   = eigenvectors
 handling_vdaggerv   = read
 path_vdaggerv       = /hiskp2/werner/output/
-#path_vdaggerv       = /data2/test5/liuming_operators
 
 # output path
 output_path = /hiskp2/werner/output/sLapH_contraction-test/MovingFrameMomentum/
@@ -36,7 +35,7 @@ quark = s:5:TB:2:EI:6:DF:4:/hiskp2/perambulators/A40.24_sorted/strange_2250
 
 # operators to be used                                                          
 [operator_lists]    
-operator_list = g1.d0.p0,1
+perator_list = g1.d0.p0,1
 operator_list = g10.d0.p0,1
 operator_list = g15.d0.p0,1
 operator_list = g2.d0.p0,1
