Add some comments to the CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,38 +7,58 @@ project(sLapH-contractions CXX C)
 
 include_directories("include" "include/GlobalData/")
 
+###############################################################################
+#                             External Libraries                              #
+###############################################################################
+
+# HDF5
 if(NOT DEFINED HDF5_INCLUDE_DIRS OR NOT DEFINED HDF5_LIBRARIES)
     find_package(HDF5 REQUIRED COMPONENTS C CXX)
 endif()
 include_directories(${HDF5_INCLUDE_DIRS})
 
+# Boost
 if(NOT DEFINED Boost_INCLUDE_DIRS OR NOT DEFINED Boost_LIBRARIES)
     find_package(Boost REQUIRED COMPONENTS filesystem system program_options)
 endif()
 include_directories(${Boost_INCLUDE_DIRS})
 
+# Eigen
 if(NOT DEFINED EIGEN3_INCLUDE_DIR)
     find_package(Eigen3 REQUIRED)
 endif()
 include_directories(SYSTEM ${EIGEN3_INCLUDE_DIR})
 
+# OpenMP
 find_package(OpenMP)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
 
+###############################################################################
+#                                 Build Flags                                 #
+###############################################################################
+
+# We want warnings, but not all of them.
 add_definitions(-Wall -pedantic --std=c++11)
 add_definitions(-Wno-unused-variable -Wno-unused-local-typedefs -Wno-sign-compare)
 
+# Default to “Release” build type.
 message(STATUS "Build Type: '${CMAKE_BUILD_TYPE}'")
 if(CMAKE_BUILD_TYPE STREQUAL "")
     message(STATUS "No CMAKE_BUILD_TYPE, assuming release and enabling all optimizations.")
     set(CMAKE_BUILD_TYPE Release)
 endif()
 
+# Tune for the local architecture because this code will be used where it is
+# compiled, in most cases.
 string(TOLOWER "${CMAKE_BUILD_TYPE}" cmake_build_type_lower)
 if(cmake_build_type_lower STREQUAL "release")
     add_definitions(-O3 -march=native)
 endif()
+
+###############################################################################
+#                                 Executables                                 #
+###############################################################################
 
 add_executable(contract
     modules/RandomVector.cpp
@@ -63,3 +83,7 @@ target_link_libraries(contract
     )
 
 install(TARGETS contract DESTINATION bin)
+
+###############################################################################
+#                                    Tests                                    #
+###############################################################################
