--- a/integration-test-L4/test_all.ini
+++ b/integration-test-L4/test_all.ini
@@ -29,8 +29,8 @@ overwrite_old = yes
 
 # quarks to be used - The file at the and is the location of the perambulators.
 [quarks]
-quark = u:5:TB:2:EI:2:DF:4:perambulator/light
-quark = s:5:TB:2:EI:2:DF:4:perambulator/strange
+quark = u:5:TB:2:EI:2:DF:4:light
+quark = s:5:TB:2:EI:2:DF:4:strange
 
 # operators to be used                                                          
 [operator_lists]    
