--- a/integration-test-L4/test_all.ini
+++ b/integration-test-L4/test_all.ini
@@ -51,7 +51,7 @@ operator_list = g5.d0.p0
 
 # pion
 correlator_list = C2+:Q0:Op9:Q0:Op9:P0,1,2,3,4 #pion
-correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4 #kaon
+#correlator_list = C2+:Q0:Op9:Q1:Op9:P0,1,2,3,4 #kaon
 
 # rho 2pt functions
 correlator_list = C20:Q0:Op0:Q0:Op0:P0,1,2,3,4 #rho
