--- a/integration-test-L4/test_all.ini
+++ b/integration-test-L4/test_all.ini
@@ -24,7 +24,7 @@ name_eigenvectors   = eigenvectors
 handling_vdaggerv   = build
 
 # output path
-output_path = MovingFrameMomentum
+output_path = correlators
 overwrite_old = yes
 
 # quarks to be used - The file at the and is the location of the perambulators.
