Automatically test the dilution iterator

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,7 @@ install(TARGETS contract DESTINATION bin)
 
 ### test-iterator
 
-add_executable(test-iterator
+add_executable(test-dilution-iterator
     main/test-iterator.cpp
     )
 
@@ -102,6 +102,9 @@ add_executable(test-iterator
 
 enable_testing()
 
+add_test(NAME unit-dilution-iterator
+    COMMAND "${CMAKE_CURRENT_SOURCE_DIR}/tests/dilution-iterator/run-test" "${CMAKE_CURRENT_SOURCE_DIR}")
+
 add_test(NAME integration-L4
-    COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/integration-test-L4/run-integration-test" "${CMAKE_CURRENT_BINARY_DIR}"
+    COMMAND "${CMAKE_CURRENT_SOURCE_DIR}/integration-test-L4/run-integration-test" "${CMAKE_CURRENT_BINARY_DIR}"
     WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/integration-test-L4")
