Ignore created correlators

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@
 .gdb_history
 doxygen/html
 doxygen/latex
-integration-test-L4/
-integration-test-L4/correlators/
-integration-test-L4/MovingFrameMomentum/
+tests/integration-L4/
+tests/integration-L4/correlators/
+tests/integration-L4/MovingFrameMomentum/
