Ignore all other files

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,4 @@ tests/integration-L4/correlators/
 tests/integration-L4/MovingFrameMomentum/
 Testing/Temporary
 tests/Testing/Temporary
-
+sLapH-contractions.creator.user
