Ignore all other files

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ doxygen/latex
 integration-test-L4/
 integration-test-L4/correlators/
 integration-test-L4/MovingFrameMomentum/
+sLapH-contractions.creator.user
