Test C40B and write L1_look and L2_look for C40B

--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -81,7 +81,7 @@ correlator_list = C4+C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 # neutral 4pt diagrams
 correlator_list = C40D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 correlator_list = C40V:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
-#correlator_list = C40B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
+correlator_list = C40B:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 #correlator_list = C40C:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9
 
 
