Repaired C30. WARNING: HAD TO CHANGE GAMMA STRUCTURE FOR TESTING BECAUSE PP-V IS ZERO ON 4x4

--- a/tests/integration-L4/test_all.ini
+++ b/tests/integration-L4/test_all.ini
@@ -70,7 +70,7 @@ correlator_list = C3+:Q0:Op9:Q0:Op1:Q0:Op9:P0,1,2,3,4
 correlator_list = C3+:Q0:Op9:Q0:Op2:Q0:Op9:P0,1,2,3,4
 
 # neutral 3pt diagrams
-#correlator_list = C30:Q0:Op9:Q0:Op0:Q0:Op9:P0,1,2,3,4
+correlator_list = C30:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
 
 # charged 4pt diagrams
 correlator_list = C4+D:Q0:Op9:Q0:Op9:Q0:Op9:Q0:Op9:P0,1,2,3,4
